--- a/wash-build/action.yml
+++ b/wash-build/action.yml
@@ -1,4 +1,4 @@
-name: 'Wash Build'
+name: "Wash Build"
 description: |
   Build a WebAssembly component using wash and output the component path
 
@@ -7,11 +7,11 @@ description: |
 
 outputs:
   component_path:
-    description: 'Path to the built WebAssembly component'
+    description: "Path to the built WebAssembly component"
     value: ${{ steps.build.outputs.component_path }}
 
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     - name: Compile Wasm binary and capture component path
       id: build
